# wemux

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: development.yaml  development.yml  test.yml
docs/: classes.md
src/wemux/: __init__.py  dispatcher.py  handler.py  iterator.py  message.py  messagebus.py  middleware.py  stream.py
tests/: test_command.py  test_events.py
tests/unit/: fakes.py  test_command.py  test_events.py  test_handler.py  test_messagebus.py  test_stream.py
