[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wemux"
version = "0.0.1"
description = "A message bus."
authors = [
    { name = "donsprallo", email = "donsprallo@gmail.com" },
]
dependencies = [
    "pydantic~=2.9",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]
